2007-12-21  Luca Ferretti  <elle.uca@libero.it>

	* appearance-themes.c: (theme_message_area_response_cb),
	(theme_message_area_update), (themes_init):
	* theme-util.h:
	Read WindowTitleFont and DocumentsFont from meta-theme
	and use to set the value for /apps/metacity/general/titlebar_font
	and /desktop/gnome/interface/document_font_name GConf keys.
	This closes bug #504250

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-item.c: (gnome_wp_item_update_description): slightly change
	the code layout in hoping that intltool will now pick up the
	translation hint...

2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade: don't mark padding strings for translation
	and add translation comments for the pixel order strings (bug #502087)

2007-11-28  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init):
	* theme-installer.c: (gnome_theme_installer_run): make "Open" the
	default action for the file choosers (bug #500091)

2007-11-22  Frederic Crozat  <fcrozat@mandriva.com>

	* gnome-wp-item.c: Fix detection of image mimetype (bug #498980)

2007-11-18  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (desktop_init): add shortcut for
	/usr/share/backgrounds to background file chooser and also consider it
	when setting the initial directory (bug #497807)

2007-11-11  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (changed_on_disk_cb):
	* appearance-themes.c: (theme_changed_on_disk_cb): adapt to modified
	theme change callback

2007-11-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_color_changed), (wp_props_wp_set):
	* gnome-wp-item.c: (gnome_wp_item_new), (gnome_wp_item_free),
	(gnome_wp_item_dup):
	* gnome-wp-item.h:
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml), (gnome_wp_xml_save_list):
	be more careful when reading background information from GConf and make
	sure we don't choke on NULL values later on (bug #492903)

2007-11-01  Jens Granseuer  <jensgr@gmx.net>
