@@ -1,3 +1,11 @@
+2007-12-22  Thomas Wood  <thos@gnome.org>
+
+	* theme-installer.c: (transfer_done_tgz_tbz),
+	(transfer_done_archive), (gnome_theme_install_real),
+	(transfer_done_cb), (gnome_theme_install_from_uri):
+
+	Make error dialogs more complient with the HIG (bug 400968).
+
 2007-12-21  Luca Ferretti  <elle.uca@libero.it>
 
 	* appearance-themes.c: (theme_message_area_response_cb),
